# pylint-pypy-shim

./: .gitignore  Makefile  README.md  pyproject.toml  typos.local.toml  typos.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage-main.yml  mutation-testing.yml
.rules/: python-exception-design-raising-handling-and-logging.md
docs/: developers-guide.md  users-guide.md
pkg/pylint_pypy_shim/: __init__.py  _patch.py  _version.py  cli.py  plugin.py
pylint_pypy_shim/: __init__.py
scripts/: typos_rollout.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_snapshots.py  test_patch_helpers.py  test_patch_support.py  test_plugin.py  test_pylint_pypy_e2e.py  test_pylint_pypy_properties.py
tests/__snapshots__/: test_cli_snapshots.ambr  test_patch_helpers.ambr
tests/features/: cli.feature
tests/steps/: test_cli_steps.py
tests/workflow_contracts/: __init__.py  test_mutation_testing.py
tools/: pylint_pypy.py
