[project]
name = "pylint-pypy-shim"
version = "0.1.0"
description = "pylint-pypy-shim package"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "ISC" }
dependencies = [
    "pylint>=4.0.6,<5",
    "astroid>=4,<5",
]

[dependency-groups]
dev = [
    "build",
    "hypothesis",
    "pytest",
    "pytest-bdd",
    "ruff",
    "syrupy",
    "pyright",
    "pytest-timeout",
    "pytest-xdist",
    "pyyaml>=6.0.3",
]

[tool.ruff]
line-length = 88
preview = true
src = ["pkg", "tests"]
target-version = "py311"

[tool.ruff.per-file-target-version]
"scripts/*.py" = "py313"

[tool.ruff.lint]
select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "A",        # detect shadowed builtins
    "BLE",      # disallow catch-all exceptions
    "S",        # disallow things like "exec"; also restricts "assert" but I just NOQA it when I really need it
    "DTZ",      # require strict timezone manipulation with datetime
    "FBT",      # detect boolean traps
    "N",        # enforce naming conventions, e.g. ClassName vs function_name
    "FURB",
    "B",
    "RUF",
    "LOG",
    "Q",
    "PT",
    "RSE",
    "PERF",
    "TRY",
    "D",
    "ANN",
    "C90",
    "PLR",
    "modified-iterating-set",
    "no-classmethod-decorator",
    "no-staticmethod-decorator",
    "too-many-locals",
    "too-many-boolean-expressions",
    "too-many-nested-blocks",
    "non-augmented-assignment",
    "literal-membership",
    "no-self-use",
    "unnecessary-lambda",
    "none-not-at-end-of-union",
    "class-with-mixed-type-vars",
    "unnecessary-regular-expression",
    "non-octal-permissions",
    "property-without-return",
]
extend-ignore = [
    "incorrect-blank-line-before-class",  # Conflicts with D211; prefer enforcing no blank line before class docstring.
    "multi-line-summary-second-line",  # Conflicts with D212; keep summary on the first line.
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["assert", "too-many-arguments", "too-many-positional-arguments", "magic-value-comparison", "no-self-use"]
"tests/steps/*.py" = ["assert", "too-many-arguments", "too-many-positional-arguments", "magic-value-comparison", "no-self-use"]

[tool.ruff.lint.flake8-import-conventions]
# Declare the banned `from` imports.
banned-from = [
    "typing",
    "datetime",
    "collections.abc",
    "dataclasses",
    "enum",
    "unittest.mock",
    "msgspec",
]

[tool.ruff.lint.flake8-import-conventions.aliases]
# Declare the default aliases.
altair = "alt"
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
seaborn = "sns"
scipy = "sp"
"collections.abc" = "cabc"
datetime = "dt"
"unittest.mock" = "mock"
"msgspec.json" = "msjson"
typing = "typ"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.AbstractSet".msg = "Use collections.abc.Set instead of deprecated typing generics."
"typing.AsyncContextManager".msg = "Use contextlib.AbstractAsyncContextManager instead of deprecated typing generics."
"typing.AsyncGenerator".msg = "Use collections.abc.AsyncGenerator instead of deprecated typing generics."
"typing.AsyncIterable".msg = "Use collections.abc.AsyncIterable instead of deprecated typing generics."
"typing.AsyncIterator".msg = "Use collections.abc.AsyncIterator instead of deprecated typing generics."
"typing.Awaitable".msg = "Use collections.abc.Awaitable instead of deprecated typing generics."
"typing.Callable".msg = "Use collections.abc.Callable instead of deprecated typing generics."
"typing.ChainMap".msg = "Use collections.ChainMap instead of deprecated typing generics."
"typing.Collection".msg = "Use collections.abc.Collection instead of deprecated typing generics."
"typing.Container".msg = "Use collections.abc.Container instead of deprecated typing generics."
"typing.ContextManager".msg = "Use contextlib.AbstractContextManager instead of deprecated typing generics."
"typing.Coroutine".msg = "Use collections.abc.Coroutine instead of deprecated typing generics."
"typing.Counter".msg = "Use collections.Counter instead of deprecated typing generics."
"typing.DefaultDict".msg = "Use collections.defaultdict instead of deprecated typing generics."
"typing.Deque".msg = "Use collections.deque instead of deprecated typing generics."
"typing.Dict".msg = "Use dict instead of deprecated typing generics."
"typing.FrozenSet".msg = "Use frozenset instead of deprecated typing generics."
"typing.Generator".msg = "Use collections.abc.Generator instead of deprecated typing generics."
"typing.ItemsView".msg = "Use collections.abc.ItemsView instead of deprecated typing generics."
"typing.Iterable".msg = "Use collections.abc.Iterable instead of deprecated typing generics."
"typing.Iterator".msg = "Use collections.abc.Iterator instead of deprecated typing generics."
"typing.KeysView".msg = "Use collections.abc.KeysView instead of deprecated typing generics."
"typing.List".msg = "Use list instead of deprecated typing generics."
"typing.Mapping".msg = "Use collections.abc.Mapping instead of deprecated typing generics."
"typing.Match".msg = "Use re.Match instead of deprecated typing generics."
"typing.MutableMapping".msg = "Use collections.abc.MutableMapping instead of deprecated typing generics."
"typing.MutableSequence".msg = "Use collections.abc.MutableSequence instead of deprecated typing generics."
"typing.MutableSet".msg = "Use collections.abc.MutableSet instead of deprecated typing generics."
"typing.OrderedDict".msg = "Use collections.OrderedDict instead of deprecated typing generics."
"typing.Pattern".msg = "Use re.Pattern instead of deprecated typing generics."
"typing.Reversible".msg = "Use collections.abc.Reversible instead of deprecated typing generics."
"typing.Sequence".msg = "Use collections.abc.Sequence instead of deprecated typing generics."
"typing.Set".msg = "Use set instead of deprecated typing generics."
"typing.Tuple".msg = "Use tuple instead of deprecated typing generics."
"typing.Type".msg = "Use type instead of deprecated typing generics."
"typing.ValuesView".msg = "Use collections.abc.ValuesView instead of deprecated typing generics."

[tool.ruff.lint.isort]
known-first-party = ["pylint_pypy_shim"]

[tool.ruff.lint.pydocstyle]
# Enforce NumPy docstring style
convention = "numpy"

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pylint]
max-args = 4
max-bool-expr = 2
max-locals = 10

[tool.mutmut]
# mutmut 3.6 hardcodes its importable layouts (./, src/, source/) and
# strips only the "src." prefix from mutant keys, so a pkg/ layout
# yields unattributable mutants. The committed src -> pkg symlink lets
# mutmut see a src layout without restructuring the package.
source_paths = ["src/pylint_pypy_shim/"]
pytest_add_cli_args_test_selection = ["tests/"]
# The e2e, snapshot, and BDD tests execute tools/pylint_pypy.py as a
# subprocess, resolving it from the repository root; mutmut only copies
# tests/ and pyproject.toml into its mutants/ working copy by default.
# The whole directory is listed because mutmut creates parent
# directories for directory entries only.
also_copy = ["tools/"]
do_not_mutate = [
    # Version constant: mutating the string has no behavioural signal.
    "src/pylint_pypy_shim/_version.py",
]

[tool.pytest.ini_options]
# Tests automatically killed after seconds elapsed
timeout = 30

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["pkg/pylint_pypy_shim"]

[project.entry-points."pylint"]
pylint_pypy_shim = "pylint_pypy_shim.plugin"

[project.scripts]
pylint-pypy = "pylint_pypy_shim.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
